Update package name and namespace

--- a/Runtime/UniStateMachine.asmdef
+++ b/Runtime/UniStateMachine.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "StateMachine",
-    "rootNamespace": "JeeLee.StateMachine",
+    "name": "UniStateMachine",
+    "rootNamespace": "JeeLee.UniStateMachine",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
